Actions
Bug #12102
closedprint: cast between incompatible function types
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with gcc 8:
../common/nss_ldap.c: In function '_connectToLDAP': ../common/nss_ldap.c:488:8: error: cast between incompatible function types from 'int (*)(LDAP *, char **, char **, int *, int)' {aka 'int (*)(struct ldap *, char **, char **, int *, int)'} to 'int (*)(LDAP *, char **, char **, int *, int, void *)' {aka 'int (*)(struct ldap *, char **, char **, int *, int, void *)'} [-Werror=cast-function-type] (LDAP_REBINDPROC_CALLBACK *) ^ ../common/ns_cmn_kvp.c:243:5: error: cast between incompatible function types from 'void (*)(ns_kvp_t *)' {aka 'void (*)(struct ns_kvp *)'} to 'int (*)(void *, char *)' [-Werror=cast-function-type] (VFUNC_T)ns_kvp_destroy); ^ ../common/ns.c:84:8: error: cast between incompatible function types from 'void (*)(ns_kvp_t *)' {aka 'void (*)(struct ns_kvp *)'} to 'int (*)(void *, char *)' [-Werror=cast-function-type] (VFUNC_T)ns_kvp_destroy); ^ ../common/ns_cmn_printer.c: In function 'ns_printer_name_list': ../common/ns_cmn_printer.c:152:3: error: cast between incompatible function types from 'void (*)(const char *, char *)' to 'int (*)(void *, char *)' [-Werror=cast-function-type] (VFUNC_T)_ns_append_printer_name, buf, sizeof (buf)); ^ cc1: all warnings being treated as errors
Testing done: build/install/boot
Updated by Electric Monk over 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit ef2333d135d7eeabe888ac20be8a501a394db591
commit ef2333d135d7eeabe888ac20be8a501a394db591 Author: Toomas Soome <tsoome@me.com> Date: 2019-12-27T16:13:27.000Z 12102 print: cast between incompatible function types Reviewed by: C Fraire <cfraire@me.com> Approved by: Robert Mustacchi <rm@fingolfin.org>
Actions